(Feat): Logic for converting prices to other registered currencies & Method of deleting registered currencies.
