# src/api/controllers/prices.js
@@ -1,9 +1,29 @@
 const logger = require("../../utils/logger");
+const QuotationsModel = require("../../databases/models/quotations");
 
 const currencyCompare = async (req, res) => {
     // #swagger.tags = ["Prices"]
     try {
-        res.status(200).send({ message: "Ok" });
+        const { price } = req.body;
+
+        const quotations = await QuotationsModel.find();
+
+        const prices = [];
+
+        quotations.forEach(quotation => {
+            const updatedPrice = price / quotation.valueForOneReal;
+
+            const obj = {
+                currencyInitials: quotation.initials,
+                currency: quotation.name,
+                price: updatedPrice.toFixed(2).toLocaleString({ style: "currency"}),
+            };
+
+            prices.push(obj);
+
+        });
+
+        res.status(200).send({ prices });
     } catch (error) {
         logger.error(error);
         res.status(400).send({ error: error.message });
