# src/api/routes/quotations.js
@@ -1,10 +1,11 @@
-const { getQuotations, saveManuallyQuotation, updateManuallyQuotation } = require("../controllers/quotations");
+const { getQuotations, saveQuotation, updateQuotation, deleteQuotation } = require("../controllers/quotations");
 const { Router } = require("express");
 
 const routes = Router();
 
 routes.get("/", getQuotations);
-routes.post("/", saveManuallyQuotation);
-routes.put("/:initials", updateManuallyQuotation);
+routes.post("/", saveQuotation);
+routes.patch("/:initials", updateQuotation);
+routes.delete("/:initials", deleteQuotation);
 
 module.exports = routes;
